testsuite/bsc.syntax/bsv05/ImperativeFunctionCaseMatchingStructBad.bsv.bsc-out.expected
checking package dependencies
Error: "ImperativeFunctionCaseMatchingStructBad.bsv", line 11, column 12: (P0005)
  Unexpected `{'; expected `&&&' or `:'
